syntax = "proto3";

package executors.v1.execute.v1.activities.v1;

import "executors/v1/plan/v1/plan_ref.proto";
import "google/protobuf/struct.proto";

message ExecuteLocallyRequest {
  .executors.v1.plan.v1.PlanRef plan = 1;
}

message ExecuteLocallyResponse {
  oneof outputs {
    google.protobuf.Struct terraform_outputs = 1;
  }
}
